cargo-features = ["named-profiles"]

[package]
name = "ownwar"
version = "0.1.0"
authors = ["David Hoppenbrouwers <david@salt-inc.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "*"
lazy_static = "*"
godot_rapier3d = { path = "../../../../game-assets/godot/godot_rapier3d/rapier3d" }
fxhash = "*"

[features]
server = []

[profile.dev.package."*"]
opt-level = 1
# LTO fixes no_mangle symbols being stripped
# No, I don't get it either
# See https://github.com/rust-lang/rust/issues/63125#issuecomment-516491570
#lto = true

[profile.release_no_lto]
inherits = "release"
lto = false

[profile.release]
lto = true
#debug = true # Don't forget to remove this for final builds!
